PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
03 Sep 2015, PHP 7.0.0 RC 2

- Core:
  . Fixed bug #70145 (From field incorrectly parsed from headers). (Anatol)
  . Fixed bug #70300 (Syntactical inconsistency with new group use syntax).
    (marcio dot web2 at gmail dot com)
  . Fixed bug causing exception traces with anon classes to be truncated. (Bob)

- PDO_OCI:
  . Fixed bug #70308 (PDO::ATTR_PREFETCH is ignored). (Chris Jones)

- SPL:
  . Fixed bug #70303 (Incorrect constructor reflection for ArrayObject). (cmb)

- Standard:
  . Fixed bug #70295 (Segmentation fault with setrawcookie). (Bob)

- Reflection:
  . Fixed bug causing bogus traces for ReflectionGenerator::getTrace(). (Bob)

20 Aug 2015, PHP 7.0.0 RC 1

- Core:
  . Fixed bug #70299 (Memleak while assigning object offsetGet result).
    (Laruence)
  . Fixed bug #70288 (Apache crash related to ZEND_SEND_REF). (Laruence)
  . Fixed bug #70262 (Accessing array crashes PHP 7.0beta3).
    (Laruence, Dmitry)
  . Fixed bug #70258 (Segfault if do_resize fails to allocated memory).
    (Laruence)
  . Fixed bug #70253 (segfault at _efree () in zend_alloc.c:1389). (Laruence)
  . Fixed bug #70240 (Segfault when doing unset($var());). (Laruence)
  . Fixed bug #70223 (Incrementing value returned by magic getter). (Laruence)
  . Fixed bug #70215 (Segfault when __invoke is static). (Bob)
  . Fixed bug #70207 (Finally is broken with opcache). (Laruence, Dmitry)
  . Fixed bug #70173 (ZVAL_COPY_VALUE_EX broken for 32bit Solaris Sparc).
    (Laruence, cmb)
  . Fixed bug #69487 (SAPI may truncate POST data). (cmb)
  . Fixed bug #70198 (Checking liveness does not work as expected).
    (Shafreeck Sea, Anatol Belski)
  . Fixed bug #70241/#70293 (Skipped assertions affect Generator returns). (Bob)
  . Fixed bug #70239 (Creating a huge array doesn't result in exhausted,
    but segfault). (Laruence, Anatol)
